--- a/index.html
+++ b/index.html
@@ -16,16 +16,14 @@
     <link rel="stylesheet" href="css/font.css" type="text/css" />
     <link rel="stylesheet" href="css/app.css" type="text/css" />
     <link rel="stylesheet" href="src/css/AdminLTE.min.css" type="text/css" />
+    <link rel="stylesheet" href="src/css/common.css" type="text/css" />
+    
     <link rel="stylesheet" href="src/plugins/font-awesome-4.7.0/css/font-awesome.css" type="text/css" />
     <link rel="stylesheet" href="src/plugins/datatables/dataTables.bootstrap.css" type="text/css" />
     <link rel="stylesheet" href="src/plugins/datepicker/datepicker3.css" type="text/css" />
     <link rel="stylesheet" href="src/plugins/daterangepicker/daterangepicker.css" type="text/css" />
 
-
-
     <!-- 模块css -->
-
-
     <link rel="stylesheet" href="src/pages/signin/signin.css" type="text/css" />
     <link rel="stylesheet" href="src/plugins/particles/demo.css" type="text/css" />
     <link rel="stylesheet" href="src/pages/overview/overview.css" type="text/css" />
@@ -33,7 +31,24 @@
     <link rel="stylesheet" href="src/pages/reportform/reportform.css" type="text/css" />
     <link rel="stylesheet" href="src/pages/safety/safety.css" type="text/css" />
     <link rel="stylesheet" href="src/pages/set/set.css" type="text/css" />
-
+    <!-- 安全调查 分页 -->
+    <link rel="stylesheet" href="src/pages/safety_dns/safety_dns.css" type="text/css" />
+    <link rel="stylesheet" href="src/pages/safety_direction/safety_direction.css" type="text/css" />
+    <link rel="stylesheet" href="src/pages/safety_file/safety_file.css" type="text/css" />
+    <link rel="stylesheet" href="src/pages/safety_user/safety_user.css" type="text/css" />
+    <link rel="stylesheet" href="src/pages/safety_host/safety_host.css" type="text/css" />
+    <link rel="stylesheet" href="src/pages/safety_ioc/safety_ioc.css" type="text/css" />
+    <link rel="stylesheet" href="src/pages/safety_size/safety_size.css" type="text/css" />
+    <link rel="stylesheet" href="src/pages/safety_url/safety_url.css" type="text/css" />
+    <!-- 设置分页 -->
+    <link rel="stylesheet" href="src/pages/set_basic/set_basic.css" type="text/css" />
+    <link rel="stylesheet" href="src/pages/set_black_list/set_black_list.css" type="text/css" />
+    <link rel="stylesheet" href="src/pages/set_email/set_email.css" type="text/css" />
+    <link rel="stylesheet" href="src/pages/set_licence/set_licence.css" type="text/css" />
+    <link rel="stylesheet" href="src/pages/set_net/set_net.css" type="text/css" />
+    <link rel="stylesheet" href="src/pages/set_net_ip/set_net_ip.css" type="text/css" />
+    <link rel="stylesheet" href="src/pages/set_rule/set_rule.css" type="text/css" />
+    <link rel="stylesheet" href="src/pages/set_user/set_user.css" type="text/css" />
 </head>
 
 <body ng-controller="AppCtrl">
