--- a/src/pages/alarm_detail/alarm_detail.html
+++ b/src/pages/alarm_detail/alarm_detail.html
@@ -1,4 +1,4 @@
-<div class="alarm" ng-controller="AlarmController" ng-init="app.settings.container = false;" ng-cloak>
+<div class="alarm_detail" ng-controller="Alarm_detailController" ng-init="app.settings.container = false;" ng-cloak>
     <!-- 折线图表 -->
     <div class="alarm_echart">
         <div class="alarm_echart_content">
