--- a/src/pages/overview/overview.html
+++ b/src/pages/overview/overview.html
@@ -68,7 +68,7 @@
                 <div class="o_box_header">
                     <p>
                         <i class="fa fa-desktop"></i>
-                        安全设备
+                        设备出口流量
                     </p>
                 </div>
                 <!-- /.box-header -->
