--- a/src/pages/safety_dns/safety_dns.html
+++ b/src/pages/safety_dns/safety_dns.html
@@ -1,69 +1,85 @@
-<div class="alarm" ng-controller="AlarmController" ng-init="app.settings.container = false;" ng-cloak>
-    <!-- 折线图表 -->
-    <div class="alarm_echart">
-        <div class="alarm_echart_content">
-            <div id="alarm_echart"></div>
-        </div>
-    </div>
-    <!-- Main content -->
+<div class="safety_dns" ng-controller="Safety_dnsController" ng-init="app.settings.container = false;" ng-cloak>
     <div class="row">
         <div class="col-md-12">
             <div class="nav-tabs-custom" style="margin-bottom: 0px">
                 <ul class="nav nav-tabs" style="margin-bottom:-1px;">
                     <li class="active">
-                        <a href="#" data-toggle="tab" aria-expanded="true">
-                            <i class="fa fa-bell-o"></i> 告警列表</a>
+                        <a href="javascript:void();" data-toggle="tab" aria-expanded="true">
+                            <i class="fa fa-bell-o"></i> DNS调查</a>
                     </li>
                 </ul>
 
-                <div class="tab-content" style="padding-top:0px;border-bottom:0px; ">
+                <div class="tab-content" style="padding-top:0px;border-bottom:0px;">
                     <!-- protect -->
                     <div class="tab-pane active" id="protect">
                         <div class="row margin">
                             <div class="form-group col-md-2">
-                                <label>主机</label>
-                                <input type="text" class="form-control input_radius" ng-model="searchData.client_ip" ng-keyup="myKeyup($event)">
+                                <label>主机IP</label>
+                                <input type="text" class="form-control input_radius" ng-model="dns.host_ip" ng-keyup="myKeyup($event)">
                             </div>
                             <div class="form-group col-md-2">
-                                <label>目的地址</label>
-                                <input type="text" class="form-control input_radius" ng-model="searchData.client_ip" ng-keyup="myKeyup($event)">
+                                <label>DNS服务器IP</label>
+                                <input type="text" class="form-control input_radius" ng-model="dns.server_ip" ng-keyup="myKeyup($event)">
+                            </div>
+                            <div class="form-group col-md-2">
+                                <label>域名</label>
+                                <input type="text" class="form-control input_radius" ng-model="dns.domain_ip" ng-keyup="myKeyup($event)">
+                            </div>
+                            <div class="form-group col-md-2">
+                                <label>解析IP</label>
+                                <input type="text" class="form-control input_radius" ng-model="dns.resolves_ip" ng-keyup="myKeyup($event)">
+                            </div>
+                            <div class="form-group col-md-2">
+                                <label>TTL</label>
+                                <input type="text" class="form-control input_radius" ng-model="dns.ttl" ng-keyup="myKeyup($event)">
+                            </div>
+                        </div>
+                        <div class="row margin">
+                            <div class="form-group col-md-3">
+                                <label>解析结果</label>
+                                <select class="form-control input_radius" ng-init="selectedName=0 " style="background-color: #fff;" ng-model="dns.resolves_res"
+                                    ng-options="x.num as x.type for x in statusData"></select>
                             </div>
                             <div class="form-group col-md-4">
-                                <label>告警时间</label>
+                                <label>时间</label>
                                 <input type="text" class="form-control timerange input_radius" readonly style="background-color: #fff;">
-                            </div>
-                            <div class="form-group col-md-2">
-                                <label>处理状态</label>
-                                <select class="form-control input_radius" ng-init="selectedName=0" style="background-color: #fff;" ng-model="selectedName"
-                                    ng-options="x.num as x.type for x in statusData"></select>
                             </div>
                             <div class="form-group col-md-1">
                                 <label style="width: 100%;">&nbsp;</label>
                                 <button class="form-control btn btn-primary" style="max-width: 80px;" ng-click="search()">搜&nbsp;&nbsp;索</button>
                             </div>
-                            <div class="form-group col-md-1">
-                                <label style="width: 100%;">&nbsp;</label>
-                                <button class="form-control btn btn-primary" style="max-width: 80px;" ng-click="search()">导&nbsp;&nbsp;出</button>
-                            </div>
+                            <div class="form-group col-md-1 col-md-offset-3">
+                                    <label style="width: 100%;">&nbsp;</label>
+                                    <button class="form-control btn btn-primary" style="max-width: 80px;" ng-click="export()">导&nbsp;&nbsp;出</button>
+                                </div>
                         </div>
                         <div class="row margin">
                             <table class="table table-hover ng-cloak">
                                 <tr>
-                                    <th>告警类型</th>
-                                    <th>时间</th>
-                                    <th>主机</th>
-                                    <th>目的地址</th>
-                                    <th>应用</th>
-                                    <th> 状态</th>
+                                    <th >时间</th>
+                                    <th >DNS服务器IP</th>
+                                    <th >主机IP</th>
+                                    <th >类型</th>
+                                    <th >查询</th>
+                                    <th >域名</th>
+                                    <th > 解析IP</th>
+                                    <th style="width:35px;"> 反向IP</th>
+                                    <th > 名称</th>
+                                    <th > TTL</th>
+                                    <th > 解析结果</th>
                                 </tr>
-
                                 <tr style="cursor: pointer;" ng-repeat="item in pages" ng-click="detail(item)">
-                                    <td ng-bind="item.type"></td>
-                                    <td ng-bind="item.time"></td>
-                                    <td ng-bind="item.host"></td>
-                                    <td ng-bind="item.target"></td>
-                                    <td ng-bind="item.application"></td>
-                                    <td ng-bind="item.state"></td>
+                                    <td class="td_content" ng-bind="item.time"></td>
+                                    <td class="td_content" ng-bind="item.dns_ip" ></td>
+                                    <td class="td_content" ng-bind="item.host_ip" ></td>
+                                    <td class="td_content" ng-bind="item.type" ></td>
+                                    <td class="td_content" ng-bind="item.query" ></td>
+                                    <td class="td_content" ng-bind="item.host" ></td>
+                                    <td class="td_content" ng-bind="item.host_addr"></td>
+                                    <td class="td_content" ng-bind="item.reverse_addr"></td>
+                                    <td class="td_content" ng-bind="item.name"></td>
+                                    <td class="td_content" ng-bind="item.ttl"></td>
+                                    <td class="td_content" ng-bind="item.des_query"></td>
                                 </tr>
                             </table>
 
@@ -100,6 +116,8 @@
                                     <li>
                                         <a href="javascript:void(0);" ng-click="getPage(pages.pageNow+2)" ng-bind="pages.pageNow+2" ng-if="pages.pageNow<pages.maxPage-2"></a>
                                     </li>
+
+
                                     <li>
                                         <a href="javascript:void(0);" ng-if="pages.pageNow<pages.maxPage-3">...</a>
                                     </li>
@@ -111,18 +129,15 @@
                                         <a href="javascript:void(0);" ng-click="getPage(pages.pageNow+1)" ng-if="pages.pageNow<pages.maxPage">下一页</a>
                                     </li>
                                 </ul>
+
                             </div>
-                            <!-- /.angularjs分页 -->
+
+
                         </div>
+
                     </div>
-                    <!-- /.protect -->
-
                 </div>
-                <!-- /.nav-tabs-custom -->
             </div>
-            <!-- /.nav-tabs-custom -->
         </div>
-        <!-- /.col-md-12 -->
     </div>
-
 </div>
