--- a/src/pages/safety_user/safety_user.html
+++ b/src/pages/safety_user/safety_user.html
@@ -1,69 +1,56 @@
-<div class="alarm" ng-controller="AlarmController" ng-init="app.settings.container = false;" ng-cloak>
-    <!-- 折线图表 -->
-    <div class="alarm_echart">
-        <div class="alarm_echart_content">
-            <div id="alarm_echart"></div>
-        </div>
-    </div>
-    <!-- Main content -->
+<div class="safety_user" ng-controller="Safety_userController" ng-init="app.settings.container = false;" ng-cloak>
+
     <div class="row">
         <div class="col-md-12">
             <div class="nav-tabs-custom" style="margin-bottom: 0px">
                 <ul class="nav nav-tabs" style="margin-bottom:-1px;">
                     <li class="active">
-                        <a href="#" data-toggle="tab" aria-expanded="true">
-                            <i class="fa fa-bell-o"></i> 告警列表</a>
+                        <a href="javascript:void();" data-toggle="tab" aria-expanded="true">
+                            <i class="fa fa-bell-o"></i> 用户调查</a>
                     </li>
                 </ul>
 
-                <div class="tab-content" style="padding-top:0px;border-bottom:0px; ">
+                <div class="tab-content" style="padding-top:0px;border-bottom:0px;">
                     <!-- protect -->
                     <div class="tab-pane active" id="protect">
                         <div class="row margin">
                             <div class="form-group col-md-2">
-                                <label>主机</label>
-                                <input type="text" class="form-control input_radius" ng-model="searchData.client_ip" ng-keyup="myKeyup($event)">
+                                <label>用户名</label>
+                                <input type="text" class="form-control input_radius" ng-model="url.source_ip" ng-keyup="myKeyup($event)">
                             </div>
                             <div class="form-group col-md-2">
-                                <label>目的地址</label>
-                                <input type="text" class="form-control input_radius" ng-model="searchData.client_ip" ng-keyup="myKeyup($event)">
+                                <label>主机IP</label>
+                                <input type="text" class="form-control input_radius" ng-model="url.source_port" ng-keyup="myKeyup($event)">
                             </div>
                             <div class="form-group col-md-4">
-                                <label>告警时间</label>
-                                <input type="text" class="form-control timerange input_radius" readonly style="background-color: #fff;">
-                            </div>
-                            <div class="form-group col-md-2">
-                                <label>处理状态</label>
-                                <select class="form-control input_radius" ng-init="selectedName=0" style="background-color: #fff;" ng-model="selectedName"
-                                    ng-options="x.num as x.type for x in statusData"></select>
-                            </div>
-                            <div class="form-group col-md-1">
-                                <label style="width: 100%;">&nbsp;</label>
-                                <button class="form-control btn btn-primary" style="max-width: 80px;" ng-click="search()">搜&nbsp;&nbsp;索</button>
-                            </div>
-                            <div class="form-group col-md-1">
-                                <label style="width: 100%;">&nbsp;</label>
-                                <button class="form-control btn btn-primary" style="max-width: 80px;" ng-click="search()">导&nbsp;&nbsp;出</button>
-                            </div>
+                                    <label>时间</label>
+                                    <input type="text" class="form-control timerange input_radius" readonly style="background-color: #fff;">
+                                </div>
+    
+                                <div class="form-group col-md-1">
+                                    <label style="width: 100%;">&nbsp;</label>
+                                    <button class="form-control btn btn-primary" style="max-width: 80px;" ng-click="search()">搜&nbsp;&nbsp;索</button>
+                                </div>
+                                <div class="form-group col-md-1 col-md-offset-2">
+                                    <label style="width: 100%;">&nbsp;</label>
+                                    <button class="form-control btn btn-primary" style="max-width: 80px;" ng-click="export()">导&nbsp;&nbsp;出</button>
+                                </div>
+
                         </div>
+                       
                         <div class="row margin">
                             <table class="table table-hover ng-cloak">
                                 <tr>
-                                    <th>告警类型</th>
                                     <th>时间</th>
-                                    <th>主机</th>
-                                    <th>目的地址</th>
+                                    <th>用户名</th>
+                                    <th>主机IP</th>
                                     <th>应用</th>
-                                    <th> 状态</th>
                                 </tr>
-
                                 <tr style="cursor: pointer;" ng-repeat="item in pages" ng-click="detail(item)">
-                                    <td ng-bind="item.type"></td>
-                                    <td ng-bind="item.time"></td>
-                                    <td ng-bind="item.host"></td>
-                                    <td ng-bind="item.target"></td>
-                                    <td ng-bind="item.application"></td>
-                                    <td ng-bind="item.state"></td>
+                                    <td class="td_content" ng-bind="item.time"></td>
+                                    <td class="td_content" ng-bind="item.source_ip"></td>
+                                    <td class="td_content" ng-bind="item.dns_ip"></td>
+                                    <td class="td_content" ng-bind="item.host"></td>
                                 </tr>
                             </table>
 
@@ -100,6 +87,8 @@
                                     <li>
                                         <a href="javascript:void(0);" ng-click="getPage(pages.pageNow+2)" ng-bind="pages.pageNow+2" ng-if="pages.pageNow<pages.maxPage-2"></a>
                                     </li>
+
+
                                     <li>
                                         <a href="javascript:void(0);" ng-if="pages.pageNow<pages.maxPage-3">...</a>
                                     </li>
@@ -111,18 +100,16 @@
                                         <a href="javascript:void(0);" ng-click="getPage(pages.pageNow+1)" ng-if="pages.pageNow<pages.maxPage">下一页</a>
                                     </li>
                                 </ul>
-                            </div>
-                            <!-- /.angularjs分页 -->
-                        </div>
-                    </div>
-                    <!-- /.protect -->
 
+                            </div>
+
+
+                        </div>
+
+                    </div>
                 </div>
-                <!-- /.nav-tabs-custom -->
             </div>
-            <!-- /.nav-tabs-custom -->
         </div>
-        <!-- /.col-md-12 -->
     </div>
 
 </div>
