更新 首页动画

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/app.css" type="text/css" />
     <link rel="stylesheet" href="src/css/AdminLTE.min.css" type="text/css" />
     <link rel="stylesheet" href="src/css/common.css" type="text/css" />
+    <link rel="stylesheet" href="src/plugins/bootstrap-switch/css/bootstrap3/bootstrap-switch.css" type="text/css" />
     
     <link rel="stylesheet" href="src/plugins/font-awesome-4.7.0/css/font-awesome.css" type="text/css" />
     <link rel="stylesheet" href="src/plugins/datatables/dataTables.bootstrap.css" type="text/css" />
@@ -91,6 +92,8 @@
     <script src="src/plugins/daterangepicker/moment.js"></script>
     <script src="src/plugins/daterangepicker/moment-zh.js"></script>
     <script src="src/plugins/daterangepicker/daterangepicker.js"></script>
+    
+
 
     <!-- App -->
     <script src="js/app.js"></script>
@@ -112,6 +115,8 @@
     <script src="js/directives/ui-toggleclass.js"></script>
     <script src="js/directives/ui-validate.js"></script>
     <script src="js/controllers/bootstrap.js"></script>
+        <!-- plugins -->
+        <script src="src/plugins/bootstrap-switch/js/bootstrap-switch.js"></script>
     <!-- Lazy loading -->
 </body>
 
