--- a/src/pages/set_black_list/set_black_list.html
+++ b/src/pages/set_black_list/set_black_list.html
@@ -22,7 +22,7 @@
                                     <div class="box-body">
                                         <table class="table table-hover  ng-cloak">
                                             <tr>
-                                                <th>序号</th>
+                                                <th style="width:40px">序号</th>
                                                 <th>MD5</th>
                                                 <th>创建时间</th>
                                                 <th>更新时间</th>
@@ -120,7 +120,7 @@
                                     <div class="box-body">
                                         <table class="table table-hover  ng-cloak">
                                             <tr>
-                                                <th>序号</th>
+                                                <th style="width:40px">序号</th>
                                                 <th>MD5</th>
                                                 <th>创建时间</th>
                                                 <th>更新时间</th>
