--- a/src/pages/set_licence/set_licence.html
+++ b/src/pages/set_licence/set_licence.html
@@ -1,11 +1,107 @@
 <div class="set" ng-controller="Set_licenceController" ng-init="app.settings.container = false;" ng-cloak>
     <!-- Main content -->
     <div class="row">
-            <div class="col-md-12 ">
-                <div class="set_content">
-                  
+        <div class="col-md-12 ">
+            <div class="set_content">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="row">
+                            <div class="form-group col-md-2 form_class">
+                                <h4>证书列表</h4>
+                            </div>
+                            <div class="form-group col-md-2 col-md-offset-6 form_class">
+                                <button class="form-control btn btn-primary" style="max-width: 93px;margin-top: 3px;" ng-click="search()">在线激活</button>
+                            </div>
+                            <div class="form-group col-md-2  form_class">
+                                <button class="form-control btn btn-primary" style="max-width: 93px;margin-top: 3px;" ng-click="search()">导入许可证</button>
+                            </div>
+                        </div>
+                        <div class="box box-solid" style="margin-top:10px;">
+                            <div id="myTabContent" class="tab-content">
+                                <div class="tab-pane fade in active">
+                                    <div class="box-body">
+                                        <table class="table table-hover  ng-cloak">
+                                            <tr>
+                                                <th style="width: 50px;">序号</th>
+                                                <th style="width: 240px;">序列号</th>
+                                                <th>受保护机构</th>
+                                                <th>授权时间</th>
+                                                <th>授权到期时间</th>
+                                                <th>许可证状态</th>
+                                            </tr>
+                                            <tr>
+                                                <td>1</td>
+                                                <td>3U2BX-8NRV4-SNYLN-RMB3X-RHE4X</td>
+                                                <td>测试612</td>
+                                                <td>2018-06-12 00:00</td>
+                                                <td>2018-09-12 00:00</td>
+                                                <td>已授权</td>
+                                            </tr>
+                                            <tr>
+                                                <td>2</td>
+                                                <td>3U2BX-8NRV4-SNYLN-RMB3X-RHE4X</td>
+                                                <td>测试6sas</td>
+                                                <td>2018-06-12 00:00</td>
+                                                <td>2018-09-12 00:00</td>
+                                                <td>已授权</td>
+                                            </tr>
+                                        </table>
+                                        <!-- angularjs分页 -->
+                                        <div style="border-top: 1px solid #f4f4f4;padding: 10px;">
+                                            <em>共有
+                                                <span ng-bind="pages0.count"></span>条</em>
+                                            <!-- angularjs分页 -->
+                                            <ul class="pagination pagination-sm no-margin pull-right ng-cloak">
+                                                <li>
+                                                    <a href="javascript:void(0);" ng-click="getPage0(pages0.pageNow-1)" ng-if="pages0.pageNow>1">上一页</a>
+                                                </li>
+                                                <li>
+                                                    <a href="javascript:void(0);" ng-click="getPage0(1)" ng-if="pages0.pageNow>1">1</a>
+                                                </li>
+                                                <li>
+                                                    <a href="javascript:void(0);" ng-if="pages0.pageNow>4">...</a>
+                                                </li>
+
+                                                <li>
+                                                    <a href="javascript:void(0);" ng-click="getPage0(pages0.pageNow-2)" ng-bind="pages0.pageNow-2" ng-if="pages0.pageNow>3"></a>
+                                                </li>
+                                                <li>
+                                                    <a href="javascript:void(0);" ng-click="getPage0(pages0.pageNow-1)" ng-bind="pages0.pageNow-1" ng-if="pages0.pageNow>2"></a>
+                                                </li>
+
+                                                <li class="active">
+                                                    <a href="javascript:void(0);" ng-bind="pages0.pageNow"></a>
+                                                </li>
+
+                                                <li>
+                                                    <a href="javascript:void(0);" ng-click="getPage0(pages0.pageNow+1)" ng-bind="pages0.pageNow+1" ng-if="pages0.pageNow<pages0.maxPage-1"></a>
+                                                </li>
+                                                <li>
+                                                    <a href="javascript:void(0);" ng-click="getPage0(pages0.pageNow+2)" ng-bind="pages0.pageNow+2" ng-if="pages0.pageNow<pages0.maxPage-2"></a>
+                                                </li>
+
+
+                                                <li>
+                                                    <a href="javascript:void(0);" ng-if="pages0.pageNow<pages0.maxPage-3">...</a>
+                                                </li>
+
+                                                <li>
+                                                    <a href="javascript:void(0);" ng-click="getPage0(pages0.maxPage)" ng-bind="pages0.maxPage" ng-if="pages0.pageNow<pages0.maxPage"></a>
+                                                </li>
+                                                <li>
+                                                    <a href="javascript:void(0);" ng-click="getPage0(pages0.pageNow+1)" ng-if="pages0.pageNow<pages0.maxPage">下一页</a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                        <!-- /.angularjs分页 -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+    </div>
 
 </div>
