--- a/src/pages/set_net/set_net.html
+++ b/src/pages/set_net/set_net.html
@@ -1,11 +1,93 @@
 <div class="set" ng-controller="Set_netController" ng-init="app.settings.container = false;" ng-cloak>
     <!-- Main content -->
     <div class="row">
-            <div class="col-md-12 ">
-                <div class="set_content">
-                  
+        <div class="col-md-12 ">
+            <div class="set_content">
+                <!-- 网络设备 -->
+                <div class="email_item">
+                    <div class="email_item_header row">
+                        <h4 class="col-md-1" style="min-width:130px">网络设备</h4>
+                        <div class="col-md-3" style="max-width: 230px">
+                            <select class="form-control input_radius" style="background-color: #fff;" ng-model="net.statusData" ng-options="x.num as x.type for x in statusData"></select>
+                        </div>
+                    </div>
+                    <div class="form-group row item_form">
+                        <label for="host" class="col-sm-1 control-label" style="min-width:130px">是否启用</label>
+                        <div class="col-sm-6">
+                            <div class="pull-left">
+                                <input class="tgl tgl-ios" id="encryption" type="checkbox" ng-checked="net.type.enable == 'yes'" ng-click="net.type.enable = (net.type.enable=='no'?'yes':'no')">
+                                <label class="tgl-btn" for="encryption"></label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group row item_form" ng-if="net.type.enable == 'yes'">
+                        <label for="port" class="col-sm-1 control-label" style="min-width:130px">获取IP方式</label>
+                        <div class="col-sm-3" style="max-width: 230px">
+                            <select class="form-control input_radius" style="background-color: #fff;" ng-model="net.type.ip_type" ng-options="x.num as x.type for x in ip_type"></select>
+                        </div>
+                    </div>
+                    <div class="form-group row item_form" ng-if="net.type.enable == 'yes' && net.type.ip_type == 1">
+                        <label for="port" class="col-sm-1 control-label" style="min-width:130px">IP地址</label>
+                        <div class="col-sm-3">
+                            <input type="text" class="form-control item_input" id="ip_addr" placeholder="" ng-model="net.data.ip_addr">
+                        </div>
+                    </div>
+                    <div class="form-group row item_form" ng-if="net.type.enable == 'yes' && net.type.ip_type == 1">
+                        <label for="port" class="col-sm-1 control-label" style="min-width:130px">子网掩码</label>
+                        <div class="col-sm-3">
+                            <input type="text" class="form-control item_input" id="sub_net" placeholder="" ng-model="net.data.sub_net">
+                        </div>
+                    </div>
+                    <div class="form-group row item_form" ng-if="net.type.enable == 'yes' && net.type.ip_type == 1">
+                        <label for="port" class="col-sm-1 control-label" style="min-width:130px">默认网关</label>
+                        <div class="col-sm-3">
+                            <input type="text" class="form-control item_input" id="default_gateway" placeholder="" ng-model="net.data.default_gateway">
+                        </div>
+                    </div>
+                    <div class="form-group row item_form" ng-if="net.type.enable == 'yes' && net.type.ip_type == 1">
+                        <label for="port" class="col-sm-1 control-label" style="min-width:130px">首选DNS服务器</label>
+                        <div class="col-sm-3">
+                            <input type="text" class="form-control item_input" id="first_dns" placeholder="" ng-model="net.data.first_dns">
+                        </div>
+                    </div>
+                    <div class="form-group row item_form" ng-if="net.type.enable == 'yes' && net.type.ip_type == 1">
+                        <label for="port" class="col-sm-1 control-label" style="min-width:130px">备用DNS服务器</label>
+                        <div class="col-sm-3">
+                            <input type="text" class="form-control item_input" id="spare_dns" placeholder="" ng-model="net.data.spare_dns">
+                        </div>
+                    </div>
+                    <div class="row" ng-if="net.type.enable == 'yes'">
+                        <div class="form-group col-md-1 col-md-offset-5">
+                            <label style="width: 100%;">&nbsp;</label>
+                            <button class="form-control btn btn-primary" style="max-width: 80px;" ng-click="keep()">保&nbsp;&nbsp;存</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- 代理服务器 -->
+                <div class="email_item">
+                    <div class="email_item_header row">
+                        <h4 class="col-md-1" style="min-width:130px">代理服务器</h4>
+                    </div>
+                    <div class="form-group row item_form">
+                        <label for="port" class="col-sm-1 control-label" style="min-width:130px">Http</label>
+                        <div class="col-sm-3">
+                            <input type="text" class="form-control item_input" id="http" placeholder="" ng-model="agent.http">
+                        </div>
+                    </div>
+                    <div class="form-group row item_form">
+                        <label for="port" class="col-sm-1 control-label" style="min-width:130px">Https</label>
+                        <div class="col-sm-3">
+                            <input type="text" class="form-control item_input" id="https" placeholder="" ng-model="agent.https">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group col-md-1 col-md-offset-5">
+                            <label style="width: 100%;">&nbsp;</label>
+                            <button class="form-control btn btn-primary" style="max-width: 80px;" ng-click="keep()">保&nbsp;&nbsp;存</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-
+    </div>
 </div>
