--- a/src/pages/set_net_ip/set_net_ip.html
+++ b/src/pages/set_net_ip/set_net_ip.html
@@ -3,7 +3,24 @@
     <div class="row">
             <div class="col-md-12 ">
                 <div class="set_content">
-                  
+                     <!-- 内部网络IP段 -->
+                <div class="email_item">
+                        <div class="email_item_header row">
+                            <h4 class="col-md-1" style="min-width:150px">内部网络IP段</h4>
+                        </div>
+                        <div class="form-group row item_form">
+                            <label for="port" class="col-sm-2 control-label" style="min-width:120px">内部网络的IP段</label>
+                            <div class="col-sm-3">
+                                <input type="text" class="form-control item_input" id="net_ip" placeholder="" ng-model="net_ip">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="form-group col-md-1 col-md-offset-5">
+                                <label style="width: 100%;">&nbsp;</label>
+                                <button class="form-control btn btn-primary" style="max-width: 80px;" ng-click="keep()">保&nbsp;&nbsp;存</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
