--- a/src/pages/set_user/set_user.html
+++ b/src/pages/set_user/set_user.html
@@ -6,10 +6,10 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="row">
-                            <div class="form-group col-md-1 form_class">
-                                <h4>用户</h4>
+                            <div class="form-group col-md-2 form_class">
+                                <h4>用户管理</h4>
                             </div>
-                            <div class="form-group col-md-2 col-md-offset-7 form_class">
+                            <div class="form-group col-md-2 col-md-offset-6 form_class">
                                 <button class="form-control btn btn-default" style="max-width: 93px;margin-top: 3px;" ng-click="search()">添加用户</button>
                             </div>
                             <div class="form-group col-md-2 form_class">
@@ -22,9 +22,9 @@
                                     <div class="box-body">
                                         <table class="table table-hover  ng-cloak">
                                             <tr>
-                                                <th>序号</th>
-                                                <th>用户名</th>
-                                                <th>角色</th>
+                                                <th style="width:40px">序号</th>
+                                                <th style="width:200px">用户名</th>
+                                                <th style="width:200px">角色</th>
                                                 <th>创建人</th>
                                                 <th>创建时间</th>
                                                 <th>操作</th>
