--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="src/plugins/particles/demo.css" type="text/css" />
     <link rel="stylesheet" href="src/pages/overview/overview.css" type="text/css" />
     <link rel="stylesheet" href="src/pages/alarm/alarm.css" type="text/css" />
+    <link rel="stylesheet" href="src/pages/alarm_detail/alarm_detail.css" type="text/css" />
     <link rel="stylesheet" href="src/pages/reportform/reportform.css" type="text/css" />
     <link rel="stylesheet" href="src/pages/safety/safety.css" type="text/css" />
     <link rel="stylesheet" href="src/pages/set/set.css" type="text/css" />
@@ -84,7 +85,7 @@
 
     <script src="src/plugins/particles/particles.min.js"></script>
     <!-- <script src="src/plugins/particles/demo.js"></script> -->
-    <script src="src/plugins/particles/app.js"></script>
+    <!-- <script src="src/plugins/particles/app.js"></script> -->
 
     <!-- timepicker -->
     <script src="src/plugins/timepicker/bootstrap-timepicker.min.js"></script>
@@ -115,6 +116,7 @@
     <script src="js/directives/ui-toggleclass.js"></script>
     <script src="js/directives/ui-validate.js"></script>
     <script src="js/controllers/bootstrap.js"></script>
+    <script src="src/pages/mode/change_password.js"></script>
         <!-- plugins -->
         <script src="src/plugins/bootstrap-switch/js/bootstrap-switch.js"></script>
     <!-- Lazy loading -->
