--- a/src/pages/alarm_detail/alarm_detail.html
+++ b/src/pages/alarm_detail/alarm_detail.html
@@ -1,128 +1,52 @@
 <div class="alarm_detail" ng-controller="Alarm_detailController" ng-init="app.settings.container = false;" ng-cloak>
-    <!-- 折线图表 -->
-    <div class="alarm_echart">
-        <div class="alarm_echart_content">
-            <div id="alarm_echart"></div>
-        </div>
-    </div>
-    <!-- Main content -->
     <div class="row">
-        <div class="col-md-12">
-            <div class="nav-tabs-custom" style="margin-bottom: 0px">
-                <ul class="nav nav-tabs" style="margin-bottom:-1px;">
-                    <li class="active">
-                        <a href="#" data-toggle="tab" aria-expanded="true">
-                            <i class="fa fa-bell-o"></i> 告警列表</a>
-                    </li>
-                </ul>
-
-                <div class="tab-content" style="padding-top:0px;border-bottom:0px; ">
-                    <!-- protect -->
-                    <div class="tab-pane active" id="protect">
-                        <div class="row margin">
-                            <div class="form-group col-md-2">
-                                <label>主机</label>
-                                <input type="text" class="form-control input_radius" ng-model="searchData.client_ip" ng-keyup="myKeyup($event)">
+        <div class="col-md-12 ">
+            <div class="set_content">
+                <div class="row">
+                    <div class="col-md-4 img_box">
+                        <img src="../src/images/icos/computer.png" class="img" alt="" height="64" width="64" srcset="">
+                        <div class="row">
+                            <div class="col-md-4 col-md-offset-3 p_head">
+                                <p>IP :</p>
+                                <p>url :</p>
+                                <p>端口 :</p>
+                                <p>地址 :</p>
                             </div>
-                            <div class="form-group col-md-2">
-                                <label>目的地址</label>
-                                <input type="text" class="form-control input_radius" ng-model="searchData.client_ip" ng-keyup="myKeyup($event)">
+                            <div class="col-md-4">
+                                <p>192.123.231.12</p>
+                                <p>http://www.maomaosw.com</p>
+                                <p>8921</p>
+                                <p>111</p>
                             </div>
-                            <div class="form-group col-md-4">
-                                <label>告警时间</label>
-                                <input type="text" class="form-control timerange input_radius" readonly style="background-color: #fff;">
-                            </div>
-                            <div class="form-group col-md-2">
-                                <label>处理状态</label>
-                                <select class="form-control input_radius" ng-init="selectedName=0" style="background-color: #fff;" ng-model="selectedName"
-                                    ng-options="x.num as x.type for x in statusData"></select>
-                            </div>
-                            <div class="form-group col-md-1">
-                                <label style="width: 100%;">&nbsp;</label>
-                                <button class="form-control btn btn-primary" style="max-width: 80px;" ng-click="search()">搜&nbsp;&nbsp;索</button>
-                            </div>
-                            <div class="form-group col-md-1">
-                                <label style="width: 100%;">&nbsp;</label>
-                                <button class="form-control btn btn-primary" style="max-width: 80px;" ng-click="search()">导&nbsp;&nbsp;出</button>
-                            </div>
-                        </div>
-                        <div class="row margin">
-                            <table class="table table-hover ng-cloak">
-                                <tr>
-                                    <th>告警类型</th>
-                                    <th>时间</th>
-                                    <th>主机</th>
-                                    <th>目的地址</th>
-                                    <th>应用</th>
-                                    <th> 状态</th>
-                                </tr>
-
-                                <tr style="cursor: pointer;" ng-repeat="item in pages" ng-click="detail(item)">
-                                    <td ng-bind="item.type"></td>
-                                    <td ng-bind="item.time"></td>
-                                    <td ng-bind="item.host"></td>
-                                    <td ng-bind="item.target"></td>
-                                    <td ng-bind="item.application"></td>
-                                    <td ng-bind="item.state"></td>
-                                </tr>
-                            </table>
-
-                            <!-- angularjs分页 -->
-                            <div style="border-top: 1px solid #f4f4f4;padding: 10px;">
-                                <em>共有
-                                    <span ng-bind="pages.count"></span>条告警</em>
-                                <!-- angularjs分页 -->
-                                <ul class="pagination pagination-sm no-margin pull-right ng-cloak">
-                                    <li>
-                                        <a href="javascript:void(0);" ng-click="getPage(pages.pageNow-1)" ng-if="pages.pageNow>1">上一页</a>
-                                    </li>
-                                    <li>
-                                        <a href="javascript:void(0);" ng-click="getPage(1)" ng-if="pages.pageNow>1">1</a>
-                                    </li>
-                                    <li>
-                                        <a href="javascript:void(0);" ng-if="pages.pageNow>4">...</a>
-                                    </li>
-
-                                    <li>
-                                        <a href="javascript:void(0);" ng-click="getPage(pages.pageNow-2)" ng-bind="pages.pageNow-2" ng-if="pages.pageNow>3"></a>
-                                    </li>
-                                    <li>
-                                        <a href="javascript:void(0);" ng-click="getPage(pages.pageNow-1)" ng-bind="pages.pageNow-1" ng-if="pages.pageNow>2"></a>
-                                    </li>
-
-                                    <li class="active">
-                                        <a href="javascript:void(0);" ng-bind="pages.pageNow"></a>
-                                    </li>
-
-                                    <li>
-                                        <a href="javascript:void(0);" ng-click="getPage(pages.pageNow+1)" ng-bind="pages.pageNow+1" ng-if="pages.pageNow<pages.maxPage-1"></a>
-                                    </li>
-                                    <li>
-                                        <a href="javascript:void(0);" ng-click="getPage(pages.pageNow+2)" ng-bind="pages.pageNow+2" ng-if="pages.pageNow<pages.maxPage-2"></a>
-                                    </li>
-                                    <li>
-                                        <a href="javascript:void(0);" ng-if="pages.pageNow<pages.maxPage-3">...</a>
-                                    </li>
-
-                                    <li>
-                                        <a href="javascript:void(0);" ng-click="getPage(pages.maxPage)" ng-bind="pages.maxPage" ng-if="pages.pageNow<pages.maxPage"></a>
-                                    </li>
-                                    <li>
-                                        <a href="javascript:void(0);" ng-click="getPage(pages.pageNow+1)" ng-if="pages.pageNow<pages.maxPage">下一页</a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <!-- /.angularjs分页 -->
                         </div>
                     </div>
-                    <!-- /.protect -->
-
+                    <div class="col-md-3 ">
+                        <img src="../src/images/icos/1121.png" class="img_arrow" height="80" width="240" alt="">
+                    </div>
+                    <div class="col-md-4  img_box">
+                        <img src="../src/images/icos/server.png" alt="" class="img" height="64" width="64" srcset="">
+                        <div class="row">
+                            <div class="col-md-4 col-md-offset-3 p_head">
+                                <p>IP :</p>
+                                <p>url :</p>
+                                <p>端口 :</p>
+                                <p>地址 :</p>
+                            </div>
+                            <div class="col-md-4">
+                                <p>192.123.231.12</p>
+                                <p>http://www.maomaosw.com</p>
+                                <p>8921</p>
+                                <p>111</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <!-- /.nav-tabs-custom -->
+                <div class="row">
+                    
+                </div>
+
             </div>
-            <!-- /.nav-tabs-custom -->
         </div>
-        <!-- /.col-md-12 -->
     </div>
 
 </div>
