--- a/tpl/blocks/header.html
+++ b/tpl/blocks/header.html
@@ -1,36 +1,36 @@
-      <!-- navbar header -->
-      <div class="navbar-header {{app.settings.navbarHeaderColor}}">
-        <button class="pull-right visible-xs dk" ui-toggle-class="show" data-target=".navbar-collapse">
-          <i class="glyphicon glyphicon-cog"></i>
-        </button>
-        <button class="pull-right visible-xs" ui-toggle-class="off-screen" data-target=".app-aside" ui-scroll="app">
-          <i class="glyphicon glyphicon-align-justify"></i>
-        </button>
-        <!-- brand -->
-        <a href="#/" class="navbar-brand text-lt">
-          <i class="fa fa-btc"></i>
-          <img src="img/logo.png" alt="." class="hide">
-          <span class="hidden-folded m-l-xs">{{app.title}}</span>
-        </a>
-        <!-- / brand -->
-      </div>
-      <!-- / navbar header -->
+<!-- navbar header -->
+<div class="navbar-header {{app.settings.navbarHeaderColor}}">
+    <button class="pull-right visible-xs dk" ui-toggle-class="show" data-target=".navbar-collapse">
+        <i class="glyphicon glyphicon-cog"></i>
+    </button>
+    <button class="pull-right visible-xs" ui-toggle-class="off-screen" data-target=".app-aside" ui-scroll="app">
+        <i class="glyphicon glyphicon-align-justify"></i>
+    </button>
+    <!-- brand -->
+    <a href="#/" class="navbar-brand text-lt">
+        <i class="fa fa-btc"></i>
+        <img src="img/logo.png" alt="." class="hide">
+        <span class="hidden-folded m-l-xs">{{app.title}}</span>
+    </a>
+    <!-- / brand -->
+</div>
+<!-- / navbar header -->
 
-      <!-- navbar collapse -->
-      <div class="collapse pos-rlt navbar-collapse box-shadow {{app.settings.navbarCollapseColor}}">
-        <!-- buttons -->
-        <div class="nav navbar-nav hidden-xs">
-          <a href class="btn no-shadow navbar-btn" ng-click="app.settings.asideFolded = !app.settings.asideFolded">
+<!-- navbar collapse -->
+<div class="collapse pos-rlt navbar-collapse box-shadow {{app.settings.navbarCollapseColor}}">
+    <!-- buttons -->
+    <div class="nav navbar-nav hidden-xs">
+        <a href class="btn no-shadow navbar-btn" ng-click="app.settings.asideFolded = !app.settings.asideFolded">
             <i class="fa {{app.settings.asideFolded ? 'fa-indent' : 'fa-dedent'}} fa-fw"></i>
-          </a>
-          <!-- <a href class="btn no-shadow navbar-btn" ui-toggle-class="show" target="#aside-user">
+        </a>
+        <!-- <a href class="btn no-shadow navbar-btn" ui-toggle-class="show" target="#aside-user">
             <i class="icon-user fa-fw"></i>
           </a> -->
-        </div>
-        <!-- / buttons -->
+    </div>
+    <!-- / buttons -->
 
-        <!-- link and dropdown -->
-        <!-- <ul class="nav navbar-nav hidden-sm">
+    <!-- link and dropdown -->
+    <!-- <ul class="nav navbar-nav hidden-sm">
           <li class="dropdown pos-stc" dropdown>
             <a href class="dropdown-toggle" dropdown-toggle>
               <span>Mega</span> 
@@ -158,10 +158,10 @@
             </ul>
           </li>
         </ul> -->
-        <!-- / link and dropdown -->
+    <!-- / link and dropdown -->
 
-        <!-- search form -->
-        <!-- <form class="navbar-form navbar-form-sm navbar-left shift" ui-shift="prependTo" target=".navbar-collapse" role="search" ng-controller="TypeaheadDemoCtrl">
+    <!-- search form -->
+    <!-- <form class="navbar-form navbar-form-sm navbar-left shift" ui-shift="prependTo" target=".navbar-collapse" role="search" ng-controller="TypeaheadDemoCtrl">
           <div class="form-group">
             <div class="input-group">
               <input type="text" ng-model="selected" typeahead="state for state in states | filter:$viewValue | limitTo:8" class="form-control input-sm bg-light no-border rounded padder" placeholder="Search projects...">
@@ -171,11 +171,11 @@
             </div>
           </div>
         </form> -->
-        <!-- / search form -->
+    <!-- / search form -->
 
-        <!-- nabar right -->
-        <ul class="nav navbar-nav navbar-right">
-          <!-- <li class="dropdown hidden-sm" is-open="lang.isopen" dropdown>
+    <!-- nabar right -->
+    <ul class="nav navbar-nav navbar-right">
+        <!-- <li class="dropdown hidden-sm" is-open="lang.isopen" dropdown>
             <a href class="dropdown-toggle" dropdown-toggle>
               {{selectLang}} <b class="caret"></b>
             </a>
@@ -185,60 +185,64 @@
               </li>
             </ul>
           </li> -->
-          <!-- 全屏 -->
-          <li class="hidden-xs">
+        <!-- 全屏 -->
+        <li class="hidden-xs">
             <a ui-fullscreen></a>
-          </li>
-            <!-- 消息通知 -->
-          <li class="dropdown" dropdown>
+        </li>
+        <!-- 消息通知 -->
+        <li class="dropdown" dropdown>
             <a href class="dropdown-toggle" dropdown-toggle>
-              <i class="icon-bell fa-fw"></i>
-              <span class="visible-xs-inline">Notifications</span>
-              <span class="badge badge-sm up bg-danger pull-right-xs">2</span>
+                <i class="icon-bell fa-fw"></i>
+                <span class="visible-xs-inline">Notifications</span>
+                <span class="badge badge-sm up bg-danger pull-right-xs">2</span>
             </a>
-          
+
             <div class="dropdown-menu w-xl animated fadeInUp">
-              <div class="panel bg-white">
-                <div class="panel-heading b-light bg-light">
-                  <strong>你有 <span>2</span> 条消息未读</strong>
-                </div>
-                <div class="list-group">
-                  <a href class="media list-group-item">
-                    <span class="pull-left thumb-sm">
-                      <img src="img/a0.jpg" alt="..." class="img-circle">
-                    </span>
-                    <span class="media-body block m-b-none">
-                      Use awesome animate.css<br>
-                      <small class="text-muted">10 minutes ago</small>
-                    </span>
-                  </a>
-                  <a href class="media list-group-item">
-                    <span class="media-body block m-b-none">
-                      1.0 initial released<br>
-                      <small class="text-muted">1 hour ago</small>
-                    </span>
-                  </a>
-                </div>
-                <!-- <div class="panel-footer text-sm">
+                <div class="panel bg-white">
+                    <div class="panel-heading b-light bg-light">
+                        <strong>你有
+                            <span>2</span> 条消息未读</strong>
+                    </div>
+                    <div class="list-group">
+                        <a href class="media list-group-item">
+                            <span class="pull-left thumb-sm">
+                                <img src="img/a0.jpg" alt="..." class="img-circle">
+                            </span>
+                            <span class="media-body block m-b-none">
+                                Use awesome animate.css
+                                <br>
+                                <small class="text-muted">10 minutes ago</small>
+                            </span>
+                        </a>
+                        <a href class="media list-group-item">
+                            <span class="media-body block m-b-none">
+                                1.0 initial released
+                                <br>
+                                <small class="text-muted">1 hour ago</small>
+                            </span>
+                        </a>
+                    </div>
+                    <!-- <div class="panel-footer text-sm">
                   <a href class="pull-right"><i class="fa fa-cog"></i></a>
                   <a href="#notes" data-toggle="class:show animated fadeInRight">See all the notifications</a>
                 </div> -->
-              </div>
+                </div>
             </div>
             <!-- / dropdown -->
-          </li>
-          <!-- 个人中心 -->
-          <li class="dropdown" dropdown>
+        </li>
+        <!-- 个人中心 -->
+        <li class="dropdown" dropdown>
             <a href class="dropdown-toggle clear" dropdown-toggle>
-              <span class="thumb-sm avatar pull-right m-t-n-sm m-b-n-sm m-l-sm">
-                <img src="img/a0.jpg" alt="...">
-                <i class="on md b-white bottom"></i>
-              </span>
-              <span class="hidden-sm hidden-md">admin</span> <b class="caret"></b>
+                <span class="thumb-sm avatar pull-right m-t-n-sm m-b-n-sm m-l-sm">
+                    <img src="img/a0.jpg" alt="...">
+                    <i class="on md b-white bottom"></i>
+                </span>
+                <span class="hidden-sm hidden-md">admin</span>
+                <b class="caret"></b>
             </a>
             <!-- dropdown -->
             <ul class="dropdown-menu animated fadeInRight w">
-              <!-- <li class="wrapper b-b m-b-sm bg-light m-t-n-xs">
+                <!-- <li class="wrapper b-b m-b-sm bg-light m-t-n-xs">
                 <div>
                   <p>300mb of 500mb used</p>
                 </div>
@@ -260,17 +264,41 @@
                 </a>
               </li>
               <li class="divider"></li> -->
-              <li>
-                <a >修改密码</a>
-              </li>
-              <li>
-                <a ui-sref="signin">退出</a>
-              </li>
+                <li>
+                    <a ng-click="change_password('lg')" >修改密码</a>
+                </li>
+                <li>
+                    <a ui-sref="signin">退出</a>
+                </li>
             </ul>
             <!-- / dropdown -->
-          </li>
-        </ul>
-        <!-- / navbar right -->
+        </li>
+    </ul>
+    <!-- / navbar right -->
 
-      </div>
-      <!-- / navbar collapse -->
+</div>
+<!-- / navbar collapse -->
+        <script type="text/ng-template" id="modal.html"> 
+            <div>
+                <div class="modal-header">
+                    <h3 class="modal-title" align="center">
+                        修改密码
+                    </h3>
+                </div>
+                <div class="modal-body">
+                    <div align="center">
+                        用户名：
+                            <input type="text" class="form-control item_input"  placeholder="smtp.163.com" ng-model="data.username">
+                           密码： <input type="text" class="form-control item_input"  placeholder="smtp.163.com" ng-model="data.password">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-primary" ng-click="ok()">
+                        确认
+                    </button>
+                    <button class="btn btn-warning" ng-click="cancel()">
+                        退出
+                    </button>
+                </div>
+            </div>
+        </script>
