--- a/tpl/blocks/nav.html
+++ b/tpl/blocks/nav.html
@@ -42,7 +42,7 @@
 <!-- 告警 -->
   <li ui-sref-active="active">
     <a ui-sref="app.alarm">
-      <i class="glyphicon glyphicon-calendar icon text-info-dker"></i>
+      <i class="glyphicon glyphicon-bell icon text-info-dker"></i>
       <span class="font-bold">告警</span>
     </a>
   </li>
@@ -63,7 +63,7 @@
         <i class="fa fa-fw fa-angle-right text"></i>
         <i class="fa fa-fw fa-angle-down text-active"></i>
       </span>
-      <i class="glyphicon glyphicon-envelope icon text-info-lter"></i>
+      <i class="glyphicon glyphicon-search icon text-success"></i>
       <span class="font-bold">安全调查</span>
     </a>
     <ul class="nav nav-sub dk">
@@ -115,13 +115,12 @@
 
 
 <!-- 报表 -->
-<li ui-sref-active="active">
+<!-- <li ui-sref-active="active">
     <a ui-sref="app.reportform ">
-      <!-- <b class="badge bg-info pull-right">9</b> -->
       <i class="glyphicon glyphicon-th-large icon text-success"></i>
       <span class="font-bold" >报表</span>
     </a>
-  </li>
+  </li> -->
 
 
 
@@ -139,7 +138,7 @@
             <i class="fa fa-fw fa-angle-right text"></i>
             <i class="fa fa-fw fa-angle-down text-active"></i>
           </span>
-          <i class="glyphicon glyphicon-calendar icon text-info-dker"></i>
+          <i class="glyphicon glyphicon-cog icon text-info-dker"></i>
           <span class="font-bold">设置</span>
         </a>
         <ul class="nav nav-sub dk">
