--- a/src/pages/alarm/alarm.html
+++ b/src/pages/alarm/alarm.html
@@ -23,7 +23,7 @@
                                 <input type="text" class="form-control timerange input_radius" readonly style="background-color: #fff;">
                             </div>
                             <div class="form-group col-md-2">
-                                <label>主机</label>
+                                <label>源地址</label>
                                 <input type="text" class="form-control input_radius" ng-model="searchData.client_ip" ng-keyup="myKeyup($event)">
                             </div>
                             <div class="form-group col-md-2">
@@ -49,7 +49,7 @@
                                 <tr>
                                     <th>告警类型</th>
                                     <th>时间</th>
-                                    <th>主机</th>
+                                    <th>源地址</th>
                                     <th>目的地址</th>
                                     <th>应用</th>
                                     <th> 状态</th>
