--- a/src/pages/safety_url/safety_url.html
+++ b/src/pages/safety_url/safety_url.html
@@ -33,7 +33,7 @@
                                    
                                 </div>
                                 <div class="row margin">
-                                        <div class="form-group col-md-4">
+                                        <div class="form-group col-md-4" style="max-width: 300px;">
                                                 <label>时间</label>
                                                 <input type="text" class="form-control timerange input_radius" readonly style="background-color: #fff;">
                                             </div>
