--- a/tpl/blocks/header.html
+++ b/tpl/blocks/header.html
@@ -268,7 +268,7 @@
                     <a ng-click="change_password('lg')">修改密码</a>
                 </li>
                 <li>
-                    <a ui-sref="signin">退出</a>
+                    <a ng-click="sign_out()">退出</a>
                 </li>
             </ul>
             <!-- / dropdown -->
