--- a/src/pages/overview/overview.html
+++ b/src/pages/overview/overview.html
@@ -35,40 +35,36 @@
                 <div class="o_box_header">
                     <p>
                         <i class="fa fa-line-chart"></i>
-                        日志监控
+                        流量文件监控
                     </p>
                 </div>
                 <div class="row flow-content">
                     <div class="flow-left col-md-12">
                         <p class="flow-item col-md-6">
                             <span class="flow-color2"></span>
-                            <span>实时日志</span>
-                            <!-- <span class="flow-num" ng-bind="logsNum"></span> -->
+                            <span>流量</span>
                         </p>
                         <p class="flow-item col-md-6">
                             <span class="flow-color3"></span>
-
-                            <span>告警日志</span>
-                            <!-- <span class="flow-num" ng-bind="logsNum24"></span> -->
+                            <span>文件</span>
                         </p>
                     </div>
 
                     <div class="flow-right col-md-12">
                         <div id="flowtotal"></div>
                         <div id="flowinfo"></div>
-
                     </div>
                 </div>
             </div>
 
         </div>
-        <!-- 右边- 安全设备 -->
+        <!-- 右边- 协议统计 -->
         <div class="col-md-4 o_container">
             <div class="equipment">
                 <div class="o_box_header">
                     <p>
                         <i class="fa fa-desktop"></i>
-                        设备出口流量
+                        协议统计
                     </p>
                 </div>
                 <!-- /.box-header -->
@@ -82,28 +78,10 @@
             </div>
         </div>
     </div>
-
     <!-- 第二排 -->
     <div class="row o_third">
-        <!-- 左边-Top10目标端口 -->
-        <div class="o_container col-md-6">
-            <div class="target">
-                <div class="o_box_header">
-                    <p>
-                        <i class="fa fa-database"></i>
-                        Top10目标端口
-                    </p>
-                </div>
-                <div class="row">
-                    <div class="box-sed-left-right">
-                        <!-- 图表 -->
-                        <div id="target_port"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- 右边-告警-->
-        <div class="col-md-6 o_container">
+        <!-- 左边-告警-->
+        <div class="col-md-4 o_container">
             <div class="alarm">
                 <div class="o_box_header">
                     <p>
@@ -118,17 +96,79 @@
                 </div>
             </div>
         </div>
+        <!-- 中间-未处理告警 -->
+        <div class="o_container col-md-3">
+            <div class="alarm">
+                <div class="o_box_header">
+                    <p>
+                        <i class="fa fa-cubes"></i>
+                        未处理告警
+                    </p>
+                </div>
+                <div class="row untreated-content">
+                    <div id="untreatedalarm"></div>
+                </div>
+            </div>
 
+        </div>
+        <!-- 右边-威胁类型-->
+        <div class="col-md-5 o_container">
+            <div class="alarm">
+                <div class="o_box_header">
+                    <p>
+                        <i class="fa fa-life-ring"></i>
+                        威胁类型
+                    </p>
+                </div>
+                <!-- /.o_box_header -->
+                <div class="row alarm-content">
+                    <div id="threaten_type">
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <!-- 第四排 -->
+    <!-- 第三排 -->
     <div class="row o_fourth">
-        <!-- 左边-风险资产TOP5 -->
-        <div class="o_container col-md-6">
+        <!-- 左边-TOP5威胁 -->
+        <div class="o_container col-md-4">
             <div class="top">
                 <div class="o_box_header">
                     <p>
                         <i class="glyphicon glyphicon-sort-by-attributes-alt"></i>
-                        流量统计
+                        TOP5威胁
+                    </p>
+                </div>
+                <div class="row">
+                    <div id="top5">
+                        <table class="table table-striped">
+                            <tr>
+                                <th style="width:15%">排名</th>
+                                <th style="width:30%">资产</th>
+                                <th style="width:55%">风险度</th>
+                            </tr>
+                            <tr ng-repeat="(index,item) in top_threaten_data">
+                                <td ng-bind="index+1">1</td>
+                                <td ng-bind="item.client_ip"></td>
+                                <td>
+                                    <div class="progress">
+                                        <div class="progress-bar bg-success" ng-style="item.style"></div>
+                                    </div>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <!-- 中间top5风险资产-->
+        <div class="o_container col-md-4">
+            <div class="top">
+                <div class="o_box_header">
+                    <p>
+                        <i class="glyphicon glyphicon-sort-by-attributes-alt"></i>
+                        TOP5风险资产
                     </p>
                 </div>
                 <div class=" row ">
@@ -136,54 +176,52 @@
                 </div>
             </div>
         </div>
-
-        <!-- 右边-  流量统计-->
-        <div class="col-md-6 o_container">
+        <!-- 右边-  最新告警-->
+        <div class="col-md-4 o_container">
             <div class="top">
                 <div class="o_box_header">
                     <p>
                         <i class="glyphicon glyphicon-sort-by-attributes-alt"></i>
-                        流量统计
+                        最新告警
                     </p>
-
                 </div>
-                <!-- /.o_box_header -->
                 <div class="row ">
                     <div id="logrythm_right"></div>
-                    <!-- <div id="threattype" >   -->
                 </div>
             </div>
         </div>
     </div>
     <!-- 弹窗 -->
-    <!-- <div class="pop" ng-show="showpop" ng-click="popfasle(event)">
+    <div class="pop" ng-show="showpop">
         <div class="pop-content">
             <p class="pop-content-head">
-                <i class="fa fa-windows"></i> 系统状态监控 </p>
+                <i class="fa fa-windows"></i> IOT设备的网络活动拓扑 </p>
+            <span class="closed" ng-click="popfasle(event)">
+                <i class="glyphicon glyphicon-remove"></i>
+            </span>
             <div class="pop-content-info">
                 <div class="sys-chart">
-                    <div id="topology"></div>
+                    <div id="graph"></div>
                 </div>
-
             </div>
-
-        </div>
-
-    </div> -->
-</div>
-
-<script type="text/ng-template" id="tuopu.html">
-    <div style="border-radius:10px;">
-        <div class="modal-header" style="border-radius:10px;">
-            <h3 class="modal-title" align="left">
-                拓扑图
-            </h3>
-        </div>
-        <div class="modal-body">
-          
-            <div id="graph"> </div>
-            
-
         </div>
     </div>
-</script>
+    <div class="iot_pop" ng-show="iotcontent">
+        <div class="iot_pop_content">
+            <p class="iot_pop_content_head">
+                <i class="fa fa-windows"></i> IOT设备流量情况 </p>
+            <span class="closed" ng-click="ito_popfasle(event)">
+                <i class="glyphicon glyphicon-remove"></i>
+            </span>
+            <div class="pop-content-info">
+                <div class="sys-chart">
+                    <div id="iot_detail">
+
+                    </div>
+
+                    <!-- <div id="graph"></div> -->
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
