--- a/src/pages/safety_user/safety_user.html
+++ b/src/pages/safety_user/safety_user.html
@@ -14,7 +14,7 @@
                     <!-- protect -->
                     <div class="tab-pane active" id="protect">
                         <div class="row margin">
-                            <div class="form-group col-md-4">
+                            <div class="form-group col-md-4" style="max-width: 300px;">
                                 <label>时间</label>
                                 <input type="text" class="form-control timerange input_radius" readonly style="background-color: #fff;">
                             </div>
