--- a/src/pages/safety_size/safety_size.html
+++ b/src/pages/safety_size/safety_size.html
@@ -13,7 +13,7 @@
                 <div class="tab-content" style="padding-top:0px;border-bottom:0px;">
                     <!-- protect -->
                     <div class="tab-pane active" id="protect">
-                        <div class="row margin">
+                        <div class="row margin download_relative">
                             <div class="form-group col-md-4" style="max-width: 300px;">
                                 <label>时间</label>
                                 <input type="text" class="form-control timerange input_radius" readonly style="background-color: #fff;">
@@ -35,9 +35,10 @@
                                 <label style="width: 100%;">&nbsp;</label>
                                 <button class="form-control btn btn-primary" style="max-width: 80px;" ng-click="search()">搜&nbsp;索</button>
                             </div>
-                            <div class="form-group col-md-1">
-                                <label style="width: 100%;">&nbsp;</label>
-                                <button class="form-control btn btn-primary" style="max-width: 80px;" ng-click="export()">导&nbsp;出</button>
+                            <div class="download_position ">
+                                <span>
+                                    <img src="../src/images/icos/download.png" ng-click="download(item.id)" width="16" height="16" alt="">
+                                </span>
                             </div>
 
                         </div>
