--- a/src/pages/signin/signin.html
+++ b/src/pages/signin/signin.html
@@ -8,11 +8,12 @@
     <div class="m-b-lg">
         <!-- 已注册 -->
         <form name="form" class="form-validation" ng-if="!login_show">
-            <div class="list-group list-group-sm">
-                <div class="list-group-item">
-                    <input type="text" placeholder="用户名" class="form-control no-border" ng-model="user.username" required>
+            <div class="list-group list-group-sm" >
+                <div class="list-group-item" >
+                    <input type="text" placeholder="用户名" class="form-control no-border"  ng-model="user.username" required>
                 </div>
                 <div class="space">
+                    <span ng-bind="msg_error" class="error_info"> </span>
                 </div>
                 <div class="list-group-item">
                     <input type="password" placeholder="密码" class="form-control no-border" ng-model="user.password" required>
