--- a/src/pages/set_licence/set_licence.html
+++ b/src/pages/set_licence/set_licence.html
@@ -9,19 +9,33 @@
                             <div class="form-group col-md-2 form_class">
                                 <h4>证书列表</h4>
                             </div>
+                            <input type="file" id="LicenseFile" name="" style="display: none;">
                             <div class="form-group col-md-2 col-md-offset-6 form_class">
-                                <button class="form-control btn btn-primary" style="max-width: 93px;margin-top: 3px;" ng-click="search()">在线激活</button>
+                                <button class="form-control btn btn-primary" style="max-width: 93px;margin-top: 3px;" ng-click="online()">在线激活</button>
                             </div>
                             <div class="form-group col-md-2  form_class">
-                                <button class="form-control btn btn-primary" style="max-width: 93px;margin-top: 3px;" ng-click="search()">导入许可证</button>
+                                <button class="form-control btn btn-primary" style="max-width: 93px;margin-top: 3px;" ng-click="import()">导入许可证</button>
                             </div>
                         </div>
+                        <div id="hide_box" style="display: none;">
+                                <div id="inputSN" >
+                                  <form>
+                                    <div class="box-body">
+                                      <div class="col-md-12">
+                                        <label for="InputVersion">序列号：</label>
+                                        <input class="form-control" ng-model="SN">
+                                        <p class="help-block" ng-bind="'机器码：' + key"></p>
+                                      </div>
+                                    </div>
+                                  </form>
+                                </div>
+                              </div>
                         <div class="box box-solid" style="margin-top:10px;">
                             <div id="myTabContent" class="tab-content">
                                 <div class="tab-pane fade in active">
                                     <div class="box-body">
                                         <table class="table table-hover  ng-cloak">
-                                            <tr>
+                                            <tr >
                                                 <th style="width: 50px;">序号</th>
                                                 <th style="width: 240px;">序列号</th>
                                                 <th>受保护机构</th>
@@ -29,29 +43,21 @@
                                                 <th>授权到期时间</th>
                                                 <th>许可证状态</th>
                                             </tr>
-                                            <tr>
-                                                <td>1</td>
-                                                <td>3U2BX-8NRV4-SNYLN-RMB3X-RHE4X</td>
-                                                <td>测试612</td>
-                                                <td>2018-06-12 00:00</td>
-                                                <td>2018-09-12 00:00</td>
-                                                <td>已授权</td>
-                                            </tr>
-                                            <tr>
-                                                <td>2</td>
-                                                <td>3U2BX-8NRV4-SNYLN-RMB3X-RHE4X</td>
-                                                <td>测试6sas</td>
-                                                <td>2018-06-12 00:00</td>
-                                                <td>2018-09-12 00:00</td>
-                                                <td>已授权</td>
+                                            <tr ng-repeat="(index,item) in license_array">
+                                                <td ng-bind="index+1"></td>
+                                                <td ng-bind="item.SN"></td>
+                                                <td ng-bind="item.orgName"></td>
+                                                <td ng-bind="item.startTime | date:'yyyy-MM-dd HH:mm:ss'"></td>
+                                                <td ng-bind="item.endTime  | date:'yyyy-MM-dd HH:mm:ss'"></td>
+                                                <td ng-bind="item.status"></td>
                                             </tr>
                                         </table>
                                         <!-- angularjs分页 -->
                                         <div style="border-top: 1px solid #f4f4f4;padding: 10px;">
                                             <em>共有
-                                                <span ng-bind="pages0.count"></span>条</em>
+                                                <span ng-bind="license_array.length"></span>条</em>
                                             <!-- angularjs分页 -->
-                                            <ul class="pagination pagination-sm no-margin pull-right ng-cloak">
+                                            <!-- <ul class="pagination pagination-sm no-margin pull-right ng-cloak">
                                                 <li>
                                                     <a href="javascript:void(0);" ng-click="getPage0(pages0.pageNow-1)" ng-if="pages0.pageNow>1">上一页</a>
                                                 </li>
@@ -91,7 +97,7 @@
                                                 <li>
                                                     <a href="javascript:void(0);" ng-click="getPage0(pages0.pageNow+1)" ng-if="pages0.pageNow<pages0.maxPage">下一页</a>
                                                 </li>
-                                            </ul>
+                                            </ul> -->
                                         </div>
                                         <!-- /.angularjs分页 -->
                                     </div>
