--- a/src/pages/reportform/reportform.html
+++ b/src/pages/reportform/reportform.html
@@ -57,7 +57,7 @@
         </div>
 
         <div class="head-bom">
-            <button class="form-control btn btn-success " style="max-width: 80px;" ng-click="generate()">生成报表</button>
+            <button class="form-control btn btn-primary" style="max-width: 80px;" ng-click="generate()">生成报表</button>
         </div>
 
     </div>
