--- a/src/pages/set_user/set_user.html
+++ b/src/pages/set_user/set_user.html
@@ -9,18 +9,15 @@
                             <div class="form-group col-md-2 form_class">
                                 <h4>用户管理</h4>
                             </div>
-                            <div class="form-group col-md-2 col-md-offset-6 form_class">
-                                <button class="form-control btn btn-primary" style="max-width: 93px;margin-top: 3px;" ng-click="search()">添加用户</button>
+                            <div class="form-group col-md-2 col-md-offset-7 form_class">
+                                <button class="form-control btn btn-primary" style="max-width: 93px;margin-top: 3px;" ng-click="add()">添加用户</button>
                             </div>
-                            <div class="form-group col-md-2 form_class">
-                                    <button class="form-control btn btn-primary" style="max-width: 93px;margin-top: 3px;" ng-click="search()">加入用户组</button>
-                                </div>
                         </div>
                         <div class="box box-solid" style="margin-top:10px;">
                             <div id="myTabContent" class="tab-content">
                                 <div class="tab-pane fade in active">
                                     <div class="box-body">
-                                        <table class="table table-hover  ng-cloak">
+                                        <table class="table table-hover  ng-cloak" ng-show="pages.data.length>0">
                                             <tr>
                                                 <th style="width:40px">序号</th>
                                                 <th style="width:200px">用户名</th>
@@ -29,71 +26,61 @@
                                                 <th>创建时间</th>
                                                 <th>操作</th>
                                             </tr>
-                                            <tr>
-                                                <td>1</td>
-                                                <td>admin</td>
-                                                <td>admin</td>
-                                                <td></td>
-                                                <td>2018-05-08 10:47</td>
+                                            <tr style="cursor: pointer;" ng-repeat="item in pages.data">
+                                                <td style="text-align: center;" ng-bind="$index+1">1</td>
+                                                <td ng-bind="item.username">admin</td>
+                                                <td ng-bind="item.role">admin</td>
+                                                <td ng-bind="item.creatorname"></td>
+                                                <td ng-bind="item.created_at*1000 | date:'yyyy-MM-dd HH:mm'">2018-05-08 10:47</td>
                                                 <td class="cursor">&nbsp;&nbsp;
-                                                    <img src="../src/images/icos/delate.png" ng-click="del(item.id)" width="16" height="16" alt="">
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td>2</td>
-                                                <td>admin</td>
-                                                <td>admin1</td>
-                                                <td></td>
-                                                <td>2018-05-10 10:47</td>
-                                                <td class="cursor">&nbsp;&nbsp;
-                                                    <img src="../src/images/icos/delate.png" ng-click="del(item.id)" width="16" height="16" alt="">
+                                                    <!-- <img src="../src/images/icos/delate.png" ng-click="del(item.id)" width="16" height="16" alt=""> -->
+                                                    <button class="btn btn-xs btn-default" ng-click="del(item);$event.stopPropagation();" data-toggle="tooltip" title="删除用户">
+                                                        <i class="fa fa-trash-o"></i>
+                                                    </button>
+                                                    <button class="btn btn-xs btn-default" ng-click="resetPassword(item);$event.stopPropagation();" data-toggle="tooltip" title="重置密码">
+                                                        <i class="fa fa-edit"></i>
+                                                    </button>
                                                 </td>
                                             </tr>
                                         </table>
                                         <!-- angularjs分页 -->
-                                        <div style="border-top: 1px solid #f4f4f4;padding: 10px;">
+                                        <div style="border-top: 1px solid #f4f4f4;padding: 10px;min-height: 20px;">
                                             <em>共有
-                                                <span ng-bind="pages0.count"></span>条</em>
+                                                <span ng-bind="pages.count"></span>条</em>
                                             <!-- angularjs分页 -->
                                             <ul class="pagination pagination-sm no-margin pull-right ng-cloak">
                                                 <li>
-                                                    <a href="javascript:void(0);" ng-click="getPage0(pages0.pageNow-1)" ng-if="pages0.pageNow>1">上一页</a>
+                                                    <a href="javascript:void(0);" ng-click="getPage(pages.pageNow-1)" ng-if="pages.pageNow>1">上一页</a>
                                                 </li>
                                                 <li>
-                                                    <a href="javascript:void(0);" ng-click="getPage0(1)" ng-if="pages0.pageNow>1">1</a>
+                                                    <a href="javascript:void(0);" ng-click="getPage0(1)" ng-if="pages.pageNow>1">1</a>
                                                 </li>
                                                 <li>
-                                                    <a href="javascript:void(0);" ng-if="pages0.pageNow>4">...</a>
-                                                </li>
-
-                                                <li>
-                                                    <a href="javascript:void(0);" ng-click="getPage0(pages0.pageNow-2)" ng-bind="pages0.pageNow-2" ng-if="pages0.pageNow>3"></a>
+                                                    <a href="javascript:void(0);" ng-if="pages.pageNow>4">...</a>
                                                 </li>
                                                 <li>
-                                                    <a href="javascript:void(0);" ng-click="getPage0(pages0.pageNow-1)" ng-bind="pages0.pageNow-1" ng-if="pages0.pageNow>2"></a>
+                                                    <a href="javascript:void(0);" ng-click="getPage0(pages.pageNow-2)" ng-bind="pages.pageNow-2" ng-if="pages.pageNow>3"></a>
                                                 </li>
-
+                                                <li>
+                                                    <a href="javascript:void(0);" ng-click="getPage0(pages.pageNow-1)" ng-bind="pages.pageNow-1" ng-if="pages.pageNow>2"></a>
+                                                </li>
                                                 <li class="active">
-                                                    <a href="javascript:void(0);" ng-bind="pages0.pageNow"></a>
-                                                </li>
-
-                                                <li>
-                                                    <a href="javascript:void(0);" ng-click="getPage0(pages0.pageNow+1)" ng-bind="pages0.pageNow+1" ng-if="pages0.pageNow<pages0.maxPage-1"></a>
+                                                    <a href="javascript:void(0);" ng-bind="pages.pageNow"></a>
                                                 </li>
                                                 <li>
-                                                    <a href="javascript:void(0);" ng-click="getPage0(pages0.pageNow+2)" ng-bind="pages0.pageNow+2" ng-if="pages0.pageNow<pages0.maxPage-2"></a>
-                                                </li>
-
-
-                                                <li>
-                                                    <a href="javascript:void(0);" ng-if="pages0.pageNow<pages0.maxPage-3">...</a>
-                                                </li>
-
-                                                <li>
-                                                    <a href="javascript:void(0);" ng-click="getPage0(pages0.maxPage)" ng-bind="pages0.maxPage" ng-if="pages0.pageNow<pages0.maxPage"></a>
+                                                    <a href="javascript:void(0);" ng-click="getPage0(pages.pageNow+1)" ng-bind="pages.pageNow+1" ng-if="pages.pageNow<pages.maxPage-1"></a>
                                                 </li>
                                                 <li>
-                                                    <a href="javascript:void(0);" ng-click="getPage0(pages0.pageNow+1)" ng-if="pages0.pageNow<pages0.maxPage">下一页</a>
+                                                    <a href="javascript:void(0);" ng-click="getPage0(pages.pageNow+2)" ng-bind="pages.pageNow+2" ng-if="pages.pageNow<pages.maxPage-2"></a>
+                                                </li>
+                                                <li>
+                                                    <a href="javascript:void(0);" ng-if="pages.pageNow<pages.maxPage-3">...</a>
+                                                </li>
+                                                <li>
+                                                    <a href="javascript:void(0);" ng-click="getPage0(pages.maxPage)" ng-bind="pages.maxPage" ng-if="pages.pageNow<pages.maxPage"></a>
+                                                </li>
+                                                <li>
+                                                    <a href="javascript:void(0);" ng-click="getPage0(pages.pageNow+1)" ng-if="pages.pageNow<pages.maxPage">下一页</a>
                                                 </li>
                                             </ul>
                                         </div>
@@ -103,6 +90,59 @@
                                 </div>
                             </div>
                         </div>
+                        <div style="display: none;" id="hideenBox">
+                            <div id="newUser">
+                                <form>
+                                    <div class="box-body">
+                                        <div class=" {{nameerror ? 'has-error':''}}">
+                                            <label for="InputVersion">用户名：</label>
+                                            <input class="form-control" ng-model="newUser.username">
+                                            <p class="help-block">请填写用户名</p>
+                                        </div>
+
+                                        <div class=" {{passworderror ? 'has-error':''}}">
+                                            <label for="InputVersion">设置密码：</label>
+                                            <input type="password" class="form-control" ng-model="newUser.password">
+                                            <p class="help-block">请填写8-30位密码,包含大写字母、小写字母、数字、特称字符</p>
+                                        </div>
+
+                                        <div class="form-group {{repassworderror ? 'has-error':''}}">
+                                            <label for="InputVersion">确认密码：</label>
+                                            <input type="password" class="form-control" ng-model="newUser.repassword">
+                                            <p class="help-block" ng-bind="repassworderror ? '密码不一致' : '　'"></p>
+                                        </div>
+
+                                        <div>
+                                            <label for="InputVersion">角色：</label>
+                                            <!-- <input name='UserRole' type='radio' id="isshare" ng-checked="newUser.role == 'share'" ng-click="newUser.role = 'share';" style="margin: 4px 4px 4px 15px" /> -->
+                                            <!-- <label for="isshare">共享用户</label> -->
+                                            <input name='UserRole' type='radio' id="isuser" ng-checked="newUser.role == 'user'" ng-click="newUser.role = 'user';" style="margin: 4px 4px 4px 15px"
+                                            />
+                                            <label for="isuser">普通用户</label>
+                                            <input name='UserRole' type='radio' id="isadmin" ng-checked="newUser.role == 'admin'" ng-click="newUser.role = 'admin';"
+                                                style="margin: 4px 4px 4px 15px" />
+                                            <label for="isadmin">管理员</label>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                            <div id="resetPassword">
+                                    <div class="box-body">
+                                        <div class=" {{resetUser_passworderror ? 'has-error':''}}">
+                                            <label for="InputVersion">设置密码：</label>
+                                            <input type="password" class="form-control" ng-model="resetUser.password">
+                                            <p class="help-block">请填写8-30位密码,包含大写字母、小写字母、数字、特称字符</p>
+                                        </div>
+
+                                        <div class=" {{resetUser_repassworderror ? 'has-error':''}}">
+                                            <label for="InputVersion">确认密码：</label>
+                                            <input type="password" class="form-control" ng-model="resetUser.repassword">
+                                            <p class="help-block" ng-bind="resetUser_repassworderror ? '密码不一致' : '　'"></p>
+                                        </div>
+                                    </div>
+                            </div>
+                        </div>
+                    
                     </div>
                 </div>
             </div>
