--- a/src/pages/alarm_detail/alarm_detail.html
+++ b/src/pages/alarm_detail/alarm_detail.html
@@ -5,12 +5,13 @@
                 <div class="row">
                     <div class="col-md-4 img_box">
                         <img src="../src/images/icos/computer.png" class="img" alt="" height="64" width="64" srcset="">
-                        <div class="row">
+                        <!-- <div class="row">
                             <div class="col-md-4 col-md-offset-3 p_head">
-                                <p>IP :</p>
-                                <p>url :</p>
-                                <p>端口 :</p>
-                                <p>地址 :</p>
+                                <p> <span>源地址:</span> </p>
+                                <p> <span>目的地址:</span> </p>
+                                <p> <span>告警时间:</span> </p>
+                                <p> <span>源地址:</span> </p>
+                               
                             </div>
                             <div class="col-md-4">
                                 <p>192.123.231.12</p>
@@ -18,14 +19,14 @@
                                 <p>8921</p>
                                 <p>111</p>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="col-md-3 ">
                         <img src="../src/images/icos/1121.png" class="img_arrow" height="80" width="240" alt="">
                     </div>
                     <div class="col-md-4  img_box">
                         <img src="../src/images/icos/server.png" alt="" class="img" height="64" width="64" srcset="">
-                        <div class="row">
+                        <!-- <div class="row">
                             <div class="col-md-4 col-md-offset-3 p_head">
                                 <p>IP :</p>
                                 <p>url :</p>
@@ -38,44 +39,63 @@
                                 <p>8921</p>
                                 <p>111</p>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <!-- 详情 -->
                 <div class="row part">
                     <div class="part_detail">
-                        <p>Event importance:
-                            <span class="part_detail_span">High </span>
+                        <p >
+                            <span>源地址:</span>
+                            <span class="part_detail_span">源地址 </span>
                         </p>
-                        <p>Event status:
-                            <span class="part_detail_span">New </span>
+                        <p>
+                            <span>目的地址:</span>
+                            <span class="part_detail_span">目的地址 </span>
                         </p>
-                        <p>User name:
-                            <span class="part_detail_span">- </span>
+                        <p>
+                            <span>告警时间:</span>
+                            <span class="part_detail_span">告警时间 </span>
                         </p>
-                        <p>Host name:
-                            <span class="part_detail_span">- </span>
+                        <p>
+                            <span>应用:</span>
+                            <span class="part_detail_span">是什么应用的流量，例如URL告警可能是HTTP或者HTTPS，邮件可能是SMTP或者POP3，恶意文件可能是FTP </span>
                         </p>
-                        <p>Event time :
-                            <span class="part_detail_span">2018-07-22 12:22:30 </span>
+                        <p>
+                            <span>告警类型:</span>
+                            <span class="part_detail_span">与告警页面威胁类型同步 </span>
                         </p>
+                        <p>
+                            <span>告警描述:</span>
+                            <span class="part_detail_span">与告警页面内容一致 </span>
+                        </p>
+                        <p>
+                            <span>检测引擎:</span>
+                            <span class="part_detail_span">被那个引擎或者规则检测出的告警 </span>
+                        </p>
+
                     </div>
                     <div class="part_detail">
                         <h4>Object information</h4>
-                        <p>object name:
-                            <span class="part_detail_span">7e9afsd2f4ds186ds76swa877.zip</span>
+                        <p>
+                            <span>IP、URL、域名类告警:</span>
+                            <span class="part_detail_span">目前通过威胁情报匹配产生，使用威胁情报信息内容进行展示，参照iConnect的展示信息即可
+                            </span>
                         </p>
-                        <p>object type:
-                            <span class="part_detail_span"> ArchiveZip </span>
+                        <p>
+                            <span>文件类告警:</span>
+                            <span class="part_detail_span">主要通过威胁情报、SDK、沙箱、Yara来进行检测
+                            </span>
                         </p>
-                        <p>file size:
-                            <span class="part_detail_span">329KB </span>
+                        <p>
+                            <span>IP、URL、域名类告警:</span>
+                            <span class="part_detail_span">目前通过威胁情报匹配产生，使用威胁情报信息内容进行展示，参照iConnect的展示信息即可
+                            </span>
                         </p>
-                        <p>MD5:
-                            <span class="part_detail_span">76ssd2f7e9af4ds186dswa877 </span>
-                        </p>
-                        <p>SHA256:
-                            <span class="part_detail_span">e9afd86s14ds12f4df786dd</span>
+                        <p>
+                            <span>IP、URL、域名类告警:</span>
+                            <span class="part_detail_span">目前通过威胁情报匹配产生，使用威胁情报信息内容进行展示，参照iConnect的展示信息即可
+                            </span>
                         </p>
                     </div>
                     <div class="part_detail">
@@ -94,7 +114,7 @@
                                 <div style="cursor: pointer;" ng-if="selected == 0">
                                     <p>Event history</p>
                                 </div>
-                            </div>`
+                            </div>
                         </div>
                     </div>
                 </div>
