--- a/src/pages/safety_dns/safety_dns.html
+++ b/src/pages/safety_dns/safety_dns.html
@@ -38,7 +38,7 @@
                             <div class="form-group col-md-2" style="max-width: 150px;">
                                 <label>解析结果</label>
                                 <select class="form-control input_radius" ng-init="selectedName=0 " style="background-color: #fff;" ng-model="dns.resolves_res"
-                                    ng-options="x.num as x.type for x in statusData"></select>
+                                    ng-options="x.num as x.type for x in resolve_result"></select>
                             </div>
                             <div class="form-group col-md-4" style="max-width: 300px;">
                                 <label>时间</label>
@@ -48,7 +48,8 @@
                                 <label style="width: 100%;">&nbsp;</label>
                                 <button class="form-control btn btn-primary" style="max-width: 80px;" ng-click="search()">搜&nbsp;索</button>
                             </div>
-                            <div class="download_position">
+
+                            <div class="download_position ">
                                 <span>
                                     <img src="../src/images/icos/download.png" ng-click="download(item.id)" width="16" height="16" alt="">
                                 </span>
@@ -64,7 +65,7 @@
                                     <th>查询</th>
                                     <th>域名</th>
                                     <th> 解析IP</th>
-                                    <th style="width:35px;"> 反向IP</th>
+                                    <th> 反向IP</th>
                                     <th> 名称</th>
                                     <th> TTL</th>
                                     <th> 解析结果</th>
