--- a/src/pages/signin/signin.html
+++ b/src/pages/signin/signin.html
@@ -13,8 +13,9 @@
                     <input type="text" placeholder="用户名" class="form-control no-border"  ng-model="user.username" required>
                 </div>
                 <div class="space">
-                    <span ng-bind="msg_error" class="error_info"> </span>
+                    <span ng-bind="msg_error" class="error_info_signin"> </span>
                 </div>
+
                 <div class="list-group-item">
                     <input type="password" placeholder="密码" class="form-control no-border" ng-model="user.password" required>
                 </div>
