--- a/tpl/blocks/header.html
+++ b/tpl/blocks/header.html
@@ -194,34 +194,24 @@
             <a href class="dropdown-toggle" dropdown-toggle>
                 <i class="icon-bell fa-fw"></i>
                 <span class="visible-xs-inline">Notifications</span>
-                <span class="badge badge-sm up bg-danger pull-right-xs">0</span>
+                <span class="badge badge-sm up bg-danger pull-right-xs" ng-bind="new_data_info.length">0</span>
             </a>
 
             <div class="dropdown-menu w-xl animated fadeInUp">
                 <div class="panel bg-white">
                     <div class="panel-heading b-light bg-light">
                         <strong>你有
-                            <span>0</span> 条消息未读</strong>
+                            <span ng-bind="new_data_info.length">0</span> 条消息未读</strong>
                     </div>
-                    <!-- <div class="list-group">
-                        <a href class="media list-group-item">
-                            <span class="pull-left thumb-sm">
-                                <img src="img/a0.jpg" alt="..." class="img-circle">
-                            </span>
+                    <div class="list-group">
+                        <a href class="media list-group-item" style="height: 50px;" ng-click="showNews(item)" ng-repeat="item in new_data_info">
                             <span class="media-body block m-b-none">
-                                Use awesome animate.css
+                              <span ng-bind="item.title"></span>
                                 <br>
-                                <small class="text-muted">10 minutes ago</small>
+                                <small class="text-muted" ng-bind="item.content">1 hour ago</small>
                             </span>
                         </a>
-                        <a href class="media list-group-item">
-                            <span class="media-body block m-b-none">
-                                1.0 initial released
-                                <br>
-                                <small class="text-muted">1 hour ago</small>
-                            </span>
-                        </a>
-                    </div> -->
+                    </div>
                     <!-- <div class="panel-footer text-sm">
                   <a href class="pull-right"><i class="fa fa-cog"></i></a>
                   <a href="#notes" data-toggle="class:show animated fadeInRight">See all the notifications</a>
@@ -237,7 +227,7 @@
                     <!-- <img src="img/a0.jpg" alt="..."> -->
                     <!-- <i class="on md b-white bottom"></i> -->
                 </span>
-                <span class="hidden-sm hidden-md">admin</span>
+                <span class="hidden-sm hidden-md" ng-bind="user_name">admin</span>
                 <b class="caret"></b>
             </a>
             <!-- dropdown -->
